# PrayerOfHannah

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Development_Notes.md  PrayerOfHannah.sqlite  README.md  compose.yml  dockerfile  hello.py  prayer-of-hannah.sqlite  prayer-of-hannah.sqlite-shm  pyproject.toml  pytest.ini  ruff.toml  secret.txt
.github/workflows/: main.yml
migrations/: 20231027033541_User.down.sql  20231027033541_User.up.sql  20231027033549_Tenant.down.sql  20231027033549_Tenant.up.sql  20231027033557_UserTenant.down.sql  20231027033557_UserTenant.up.sql  20231110014636_SongCollection.down.sql  20231110014636_SongCollection.up.sql  20231110020353_Author.down.sql  20231110020353_Author.up.sql  20231110020400_Song.down.sql  20231110020400_Song.up.sql  20231110020408_SongAuthor.down.sql  20231110020408_SongAuthor.up.sql
src/: controllers.rs  main.py  main.rs  models.rs  poh.py  routes.rs  seed_data.rs  templates.rs
src/admin/: mod.rs
src/admin/tenant/: mod.rs  model.rs
src/admin/user/: mod.rs  model.rs
src/admin/user_tenant/: mod.rs  model.rs
src/controllers/: home.rs  song_collection.rs
src/dbs/: models.py
src/models/: author.rs  song.rs  song_author.rs  song_collection.rs
src/prayerofhannah/: main.py
src/sng/: mod.rs
src/sng/author/: mod.rs  model.rs
src/sng/song/: mod.rs  model.rs
src/sng/song_collection/: mod.rs  model.rs
src/song/: mod.rs
src/song/author/: mod.rs
src/song/song_collection/: mod.rs  model.rs
src/utils/: mod.rs
static/: 404.html  PrayerOfHannah.css
templates/: collection.html.hbs  collection_display.html.hbs  collection_form.html.hbs  home.html.hbs  song_collection_display.html.hbs  song_collection_form.html.hbs  song_collection_list.html.hbs  song_display.html.hbs
templates/admin/tenant/: display.html.hbs  form.html.hbs  list.html.hbs
templates/admin/user/: display.html.hbs  form.html.hbs  list.html.hbs
templates/admin/user_tenant/: list_tenants.html.hbs
templates/song/author/: author.html.hbs  author_display.html.hbs  author_form.html.hbs  form.html.hbs  list.html.hbs
templates/song/song/: display.html.hbs  form.html.hbs  list.html.hbs  song.html.hbs  song_form.html.hbs
templates/song/song_collection/: list.html.hbs  song_collection_display.html.hbs  song_collection_form.html.hbs  song_collection_list.html.hbs
tests/test_dbs/: test_models_author.py  test_models_author_song.py  test_models_presentation.py  test_models_song.py  test_models_song_book.py  test_models_song_book_item.py
