# Prayer of Hannah
# Free Software to provide Slides as a web service for Worship, Noticeboards and more. 
# Named in honour of Hannah (see 1 Samuel 2:1-10) and particularly from verse 8: 
# "He raises up the poor from the dust; he lifts the needy from the ash heap" 
# Copyright (C) 2023  Dave Warnock dwarnock@gmail.com

# This program is free software: you can redistribute it and/or modify it under the terms
# of the GNU Affero General Public License as published by the Free Software Foundation, 
# either version 3 of the License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
# See the GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License along with this program.  
# If not, see <http://www.gnu.org/licenses/>.

# Source code at https://github.com/dave42w/PrayerOfHannah

[package]
name = "prayer_of_hannah"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
color-eyre = "0.6.2"
dotenvy = "0.15.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

libsqlite3-sys = "0.27.0"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "macros"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }

handlebars = { version = "5.0.0", features = ["dir_source"] }

tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tower-sessions = { version = "0.9.1", default-features = false, features = [
    "sqlite-store",
    "deletion-task",
] }

axum = "0.7.4"
axum-login = "0.12.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
