[project]
name = "prayerofhannah"
version = "0.2.0"
description = "Free Software to provide Slides as a web service for Worship, Noticeboards and more."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "pytest-cov>=5.0.0",
    "pytest-randomly>=3.16.0",
    "pytest>=8.3.3",
    "robyn[templating]>=0.62.1",
    "sqlalchemy>=2.0.36",
]
