[project]
name = "prayerofhannah"
version = "0.2.0"
description = "Free Software to provide Slides as a web service for Worship, Noticeboards and more."
authors = [
  {name = "Dave Warnock", email = "dwarnock@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "robyn[templating]>=0.64.2",
    "sqlalchemy>=2.0.36",
]

[tool.mypy]
mypy_path = "src:tests"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "pytest-randomly>=3.16.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
]
